[tool.poetry]
name = "diskusagemonitor"
version = "0.1.0"
description = ""
authors = ["u1and0 <e01.ando60@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.15.0"
dash-table = "^5.0.0"
fastapi = "^0.109.1"
flask = "^3.0.2"
pandas = "^2.2.0"
plotly = "^5.18.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
